5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1675_2471.log
== TEST (2019-04-30 11:41:39) 
-- CODE:
idade=int(input())
imc=float(input())]

if(idade<=0 or idade>130 or imc<=0):
	print("Entradas:",idade," anos e IMC ",imc)
	print("Dados invalidos")
else:
	if(idade<45 and imc<22):
		print("Entradas:",idade," anos e IMC ",imc)
		print("Risco: Baixo")
	elif (idade>=45 and imc<22):
		print("Entradas:",idade," anos e IMC ",imc)
		print("Risco: Medio")
	elif(idade<45 and imc>=22):
		print("Entradas:",idade," anos e IMC ",imc)
		print("Risco: Medio")
	elif(idade>=45 and imc>=22):
		print("Entradas:",idade," anos e IMC ",imc)
		print("Risco: Alto")
		
-- ERROR:
File "XXXX", line 2
    imc=float(input())]
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:06) 
-- CODE:
idade=int(input())
imc=float(input())

if(idade<=0 or idade>130 or imc<=0):
	print("Entradas:",idade," anos e IMC ",imc)
	print("Dados invalidos")
else:
	if(idade<45 and imc<22):
		print("Entradas:",idade," anos e IMC ",imc)
		print("Risco: Baixo")
	elif (idade>=45 and imc<22):
		print("Entradas:",idade," anos e IMC ",imc)
		print("Risco: Medio")
	elif(idade<45 and imc>=22):
		print("Entradas:",idade," anos e IMC ",imc)
		print("Risco: Medio")
	elif(idade>=45 and imc>=22):
		print("Entradas:",idade," anos e IMC ",imc)
		print("Risco: Alto")
		
-- OUTPUT:
Entradas: 0  anos e IMC  0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:44:50) 
-- CODE:
idade=int(input())
imc=float(input())

if(idade<=0 or idade>130 or imc<=0):
	print("Entradas:",idade," anos e IMC ",imc)
	print("Dados invalidos")
else:
	if(idade<45 and imc<22):
		print("Entradas:",idade," anos e IMC ",imc)
		print("Risco: Baixo")
	elif (idade>=45 and imc<22):
		print("Entradas:",idade," anos e IMC ",imc)
		print("Risco: Medio")
	elif(idade<45 and imc>=22):
		print("Entradas:",idade," anos e IMC ",imc)
		print("Risco: Medio")
	elif(idade>=45 and imc>=22):
		print("Entradas:",idade," anos e IMC ",imc)
		print("Risco: Alto")
		
-- EXECUTION TIME:
0.205944
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0  anos e IMC  0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25  anos e IMC  25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50  anos e IMC  25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
